# kakoune-lsp

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING  Cargo.toml  MIT  Makefile  README.asciidoc  appveyor.yml  com.github.ul.kak-lsp.plist  kak-lsp.service  kak-lsp.toml  plugin.kak
.github/workflows/: release.yml  test.yml
ci/: before_deploy.ps1  before_deploy.sh  build-release.sh  commit-new-release.sh  install.sh  latest-changelog.sh  script.sh  update-homebrew.sh
rc/: lsp.kak  servers.kak
src/: capabilities.rs  context.rs  controller.rs  diagnostics.rs  editor_transport.rs  general.rs  language_server_transport.rs  log.rs  main.rs  markdown.rs  markup.rs  position.rs  progress.rs  project_root.rs  session.rs  settings.rs  show_message.rs  text_edit.rs  text_sync.rs  thread_worker.rs  types.rs  util.rs  wcwidth.rs  workspace.rs
src/language_features/: call_hierarchy.rs  ccls.rs  clangd.rs  code_action.rs  code_lens.rs  codeaction.rs  completion.rs  copilot.rs  cquery.rs  definition.rs  deno.rs  document_links.rs  document_symbol.rs  eclipse_jdt_ls.rs  formatting.rs  goto.rs  highlight.rs  highlights.rs  hover.rs  implementation.rs  inlay_hints.rs  kak_lsp_custom.rs  lean.rs  metals.rs  mod.rs  omnisharp.rs  range_formatting.rs  references.rs  rename.rs  rust_analyzer.rs  selection_range.rs  semantic_highlighting.rs  semantic_tokens.rs  signature_help.rs  texlab.rs
test/: README  clangd-diagnostic-gutter.sh  clangd-invalid-utf8.sh  gopls-code-action-sync.sh  gopls-code-actions-sync.sh  gopls-dynamic-settings.sh  gopls-format-on-save.sh  gopls-goto-definition.sh  gopls-offset-encoding.sh  haskell-language-server-code-lens.sh  lib.sh  littlecheck.py  old-wcwidth.sh  run  rust-analyzer-code-actions.sh  rust-analyzer-inlay-code-actions.sh  typescript-language-server-code-actions.sh  typescript-language-server-formatting.sh
testpl/: fuzz  input  perl_output  run.sh  script.pl  script.sh  sh_output  test.pl
