[package]
name = "kak-lsp"
description = "Kakoune Language Server Protocol Client"
version = "17.1.1-snapshot"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>", "Johannes Altmanninger <aclopte@gmail.com>"]
edition = "2018"
license = "Unlicense/MIT"
repository = "https://github.com/kakoune-lsp/kakoune-lsp"

[dependencies]
clap = {version = "4.4.11", features = ["cargo"] }
crossbeam-channel = "0.5.1"
daemonize = "0.5.0"
diffs = "0.5.1"
dirs = "5.0.1"
enum_primitive = "0.1.1"
fs4 = "0.7.0"
glob = "0.3.0"
indoc = "2.0.4"
itertools = "0.12.0"
jsonrpc-core = "18.0.0"
lazy_static = "1.4.0"
libc = "0.2.71"
lsp-types = { version = "0.95.0", features = ["proposed"] }
notify-debouncer-full = "0.3.1"
pulldown-cmark = "0.9.2"
rand = "0.8.4"
regex = "1.3.9"
ropey = "1.6.1"
serde = "1.0.112"
serde_derive = "1.0.112"
serde_json = "1.0.55"
serde_repr = "0.1.7"
sloggers = "2.0.2"
slog-scope = "4.3.0"
slog = { version = "2.5.2", features = ["release_max_level_debug"] }
toml = "0.8.8"
unicode-width = "0.1.10"
url = { version = "2.1.1", features = ["serde"] }
whoami = "1.1.3"

[profile.release]
lto = true

