[package]
name = "kak-lsp"
description = "Kakoune Language Server Protocol Client"
version = "17.1.1-snapshot"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>", "Johannes Altmanninger <aclopte@gmail.com>"]
edition = "2018"
license = "Unlicense/MIT"
repository = "https://github.com/kakoune-lsp/kakoune-lsp"

[dependencies]
clap = {version = "4.5.8", features = ["cargo"] }
crossbeam-channel = "0.5.1"
daemonize = "0.5.0"
diffs = "0.5.1"
dirs = "5.0.1"
enum_primitive = "0.1.1"
fs4 = "0.8.4"
glob = "0.3.0"
indoc = "2.0.5"
itertools = "0.13.0"
jsonrpc-core = "18.0.0"
lazy_static = "1.5.0"
libc = "0.2.155"
lsp-types = { version = "0.95.0", features = ["proposed"] }
notify-debouncer-full = "0.3.1"
pulldown-cmark = "0.9.2"
rand = "0.8.4"
regex = "1.10.5"
ropey = "1.6.1"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.118"
serde_repr = "0.1.19"
sloggers = "2.2.0"
slog-scope = "4.3.0"
slog = { version = "2.5.2", features = ["release_max_level_debug"] }
toml = "0.8.14"
unicode-width = "0.1.10"
url = { version = "2.5.2", features = ["serde"] }
whoami = "1.5.1"

[profile.release]
lto = true

